# cpp-cv-project-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_dependencies.py  requirements.txt  run.py  setup.py  setup_config.yaml
.github/workflows/: main.yml
Dockerfiles/: build.dockerfile
cmake/: ceres.cmake  eigen.cmake  find_ceres.cmake  find_doxygen.cmake  find_easy_profiler.cmake  find_eigen3.cmake  find_gtest.cmake  find_opencv.cmake  find_pangolin.cmake  find_spdlog.cmake  find_yaml_cpp.cmake  glad.cmake  glfw.cmake  gtsam.cmake  opencv.cmake  pangolin.cmake  pcl.cmake  utils.cmake
docker/: Dockerfile  README.md
resource/: sampleCSV.csv  sampleJSON.json
scripts/: __init__.py
scripts/cpp_tool_chains/: LICENSE  install_essentials.sh  install_llvm_toolchain.sh
scripts/install/: __init__.py
scripts/install/apt/: essential.py  optional.py
scripts/install/python/: evo.py  venv.py
scripts/install/source/: ceres.py  easy_profiler.py  eigen.py  gtest.py  gtsam.py  opencv.py  pangolin.py  pcl.py  spdlog.py
scripts/python_packages/: basic_python_packages.txt  numpy_matplotlib.txt  open3d.txt  opencv-contrib-python.txt  opencv-python.txt
scripts/third_party_clone/: cpp_utils.py
scripts/third_party_clone/ceres/: install_ceres_solver.py
scripts/third_party_clone/eigen/: install_eigen.py
scripts/third_party_clone/glad/: install_glad.py
scripts/third_party_clone/glfw/: install_glfw.py
scripts/third_party_clone/gtsam/: install_gtsam.py
scripts/third_party_clone/opencv/: install_opencv.py  install_opencv_deps.sh
scripts/third_party_clone/pangolin/: install_pangolin.py
scripts/third_party_clone/pcl/: install_pcl.py
src/: main.cpp
